package com.tangerine.ticketbox.order;

public class Email {
    private final String emailAddress;

    public Email(String emailAddress) {
        this.emailAddress = emailAddress;
    }
}
