package com.tangerine.ticketbox.theatre;

public class Actor {
    private final String actorName;

    public Actor(String actorName) {
        this.actorName = actorName;
    }
}
