package com.tangerine.ticketbox.theatre;

public class Stage {
    private final String stageValue;

    public Stage(String stageValue) {
        this.stageValue = stageValue;
    }
}
