package com.tangerine.ticketbox.theatre;

public class TheatreName {
    private final String theatreNameValue;

    public TheatreName(String theatreNameValue) {
        this.theatreNameValue = theatreNameValue;
    }
}
